# patchelf_rules

./: .gitignore  BUILD  README.md  WORKSPACE.bazel
docs/: BUILD.bazel  readme_header.vm
patchelf/: BUILD.bazel  BUILD.patchelf.bazel  patchelf.bzl  patchelf_library.bzl  patchelf_print.bzl  repositories.bzl  toolchain.bzl
test/: repositories.bzl
test/simple/: BUILD.bazel  lib.c  lib.h  main.c  util.bzl
test/simple/data/: prints_compiled_binary_rpath.txt
